page layout issue fixes

--- a/src/_bundle/styles/base.pcss
+++ b/src/_bundle/styles/base.pcss
@@ -11,8 +11,8 @@ li::before {
 li + li {
   @apply mt-4;
 }
-.article-content {
-  width: 670px;
+.article-width {
+  max-width: 700px;
 }
 .product {
   max-width: 900px;
